[workspace]
members = [
    "crates/core",
    "crates/leptix-ui",
    "crates/primitives/label",
    "crates/primitives/separator",
    "crates/primitives/accessible-icon",
    "crates/primitives/aspect-ratio",
    "crates/primitives/progress",
    "crates/primitives/toggle",
    "crates/primitives/switch",
    "crates/primitives/avatar",
    "crates/primitives/checkbox",
    "crates/primitives/collapsible",
    "crates/primitives/toggle-group",
    "crates/primitives/radio-group",
    "crates/primitives/tabs",
    "crates/primitives/accordion",
    "crates/primitives/slider",
    "crates/primitives/dialog",
    "crates/primitives/alert-dialog",
    "crates/primitives/popover",
    "crates/primitives/tooltip",
    "crates/primitives/hover-card",
    "crates/primitives/toolbar",
    "crates/primitives/dropdown-menu",
    "crates/primitives/context-menu",
    "crates/primitives/menubar",
    "crates/primitives/select",
    "crates/primitives/navigation-menu",
    "crates/primitives/toast",
    "crates/primitives/scroll-area",
    "crates/primitives/form",
    "crates/primitives/otp-field",
    "crates/primitives/password-toggle",
]
resolver = "2"

[workspace.package]
authors = ["Rantai Dev <dev@rantai.dev>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/rantai-dev/leptix"
version = "1.0.0"

[workspace.dependencies]
leptos = "0.8"
leptos-maybe-callback = "0.2"
leptos-node-ref = "0.2"
leptos-style = "0.2"
leptos-typed-fallback-show = "0.2"
leptos_dom = "0.8"
floating-ui-leptos = "0.6"
send_wrapper = "0.6"
serde = "1"
serde_json = "1"
web-sys = "0.3"

leptix-core = { path = "./crates/core", version = "1.0.0" }
leptix-label = { path = "./crates/primitives/label", version = "1.0.0" }
leptix-separator = { path = "./crates/primitives/separator", version = "1.0.0" }
leptix-accessible-icon = { path = "./crates/primitives/accessible-icon", version = "1.0.0" }
leptix-aspect-ratio = { path = "./crates/primitives/aspect-ratio", version = "1.0.0" }
leptix-progress = { path = "./crates/primitives/progress", version = "1.0.0" }
leptix-toggle = { path = "./crates/primitives/toggle", version = "1.0.0" }
leptix-switch = { path = "./crates/primitives/switch", version = "1.0.0" }
leptix-avatar = { path = "./crates/primitives/avatar", version = "1.0.0" }
leptix-checkbox = { path = "./crates/primitives/checkbox", version = "1.0.0" }
leptix-collapsible = { path = "./crates/primitives/collapsible", version = "1.0.0" }
leptix-toggle-group = { path = "./crates/primitives/toggle-group", version = "1.0.0" }
leptix-radio-group = { path = "./crates/primitives/radio-group", version = "1.0.0" }
leptix-tabs = { path = "./crates/primitives/tabs", version = "1.0.0" }
leptix-accordion = { path = "./crates/primitives/accordion", version = "1.0.0" }
leptix-slider = { path = "./crates/primitives/slider", version = "1.0.0" }
leptix-dialog = { path = "./crates/primitives/dialog", version = "1.0.0" }
leptix-alert-dialog = { path = "./crates/primitives/alert-dialog", version = "1.0.0" }
leptix-popover = { path = "./crates/primitives/popover", version = "1.0.0" }
leptix-tooltip = { path = "./crates/primitives/tooltip", version = "1.0.0" }
leptix-hover-card = { path = "./crates/primitives/hover-card", version = "1.0.0" }
leptix-toolbar = { path = "./crates/primitives/toolbar", version = "1.0.0" }
leptix-dropdown-menu = { path = "./crates/primitives/dropdown-menu", version = "1.0.0" }
leptix-context-menu = { path = "./crates/primitives/context-menu", version = "1.0.0" }
leptix-menubar = { path = "./crates/primitives/menubar", version = "1.0.0" }
leptix-select = { path = "./crates/primitives/select", version = "1.0.0" }
leptix-navigation-menu = { path = "./crates/primitives/navigation-menu", version = "1.0.0" }
leptix-toast = { path = "./crates/primitives/toast", version = "1.0.0" }
leptix-scroll-area = { path = "./crates/primitives/scroll-area", version = "1.0.0" }
leptix-form = { path = "./crates/primitives/form", version = "1.0.0" }
leptix-otp-field = { path = "./crates/primitives/otp-field", version = "1.0.0" }
leptix-password-toggle = { path = "./crates/primitives/password-toggle", version = "1.0.0" }
