[workspace]
members = [
    "crates/core",
    "crates/leptix-ui",
    "crates/primitives/label",
    "crates/primitives/separator",
    "crates/primitives/accessible-icon",
    "crates/primitives/aspect-ratio",
    "crates/primitives/progress",
    "crates/primitives/toggle",
    "crates/primitives/switch",
    "crates/primitives/avatar",
    "crates/primitives/checkbox",
    "crates/primitives/collapsible",
    "crates/primitives/toggle-group",
    "crates/primitives/radio-group",
    "crates/primitives/tabs",
    "crates/primitives/accordion",
    "crates/primitives/slider",
    "crates/primitives/dialog",
    "crates/primitives/alert-dialog",
    "crates/primitives/popover",
    "crates/primitives/tooltip",
    "crates/primitives/hover-card",
    "crates/primitives/toolbar",
    "crates/primitives/dropdown-menu",
    "crates/primitives/context-menu",
    "crates/primitives/menubar",
    "crates/primitives/select",
    "crates/primitives/navigation-menu",
    "crates/primitives/toast",
    "crates/primitives/scroll-area",
    "crates/primitives/form",
    "crates/primitives/otp-field",
    "crates/primitives/password-toggle",
    "crates/primitives/visually_hidden",
    "docs",
]
resolver = "2"

[workspace.package]
authors = ["Rantai Dev <dev@rantai.dev>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/RantAI-dev/leptix-ui"
version = "0.1.0"
keywords = ["leptos", "ui", "components", "radix", "wasm"]
categories = ["gui", "wasm", "web-programming"]
readme = "README.md"
homepage = "https://github.com/RantAI-dev/leptix-ui"

[workspace.dependencies]
leptos = "0.8"
leptos-maybe-callback = "0.2"
leptos-node-ref = "0.2"
leptos-style = "0.2"
leptos-typed-fallback-show = "0.2"
leptos_dom = "0.8"
floating-ui-leptos = "0.6"
send_wrapper = "0.6"
serde = "1"
serde_json = "1"
web-sys = "0.3"

leptix-core = { path = "./crates/core", version = "0.1.0" }
leptix-label = { path = "./crates/primitives/label", version = "0.1.0" }
leptix-separator = { path = "./crates/primitives/separator", version = "0.1.0" }
leptix-accessible-icon = { path = "./crates/primitives/accessible-icon", version = "0.1.0" }
leptix-aspect-ratio = { path = "./crates/primitives/aspect-ratio", version = "0.1.0" }
leptix-progress = { path = "./crates/primitives/progress", version = "0.1.0" }
leptix-toggle = { path = "./crates/primitives/toggle", version = "0.1.0" }
leptix-switch = { path = "./crates/primitives/switch", version = "0.1.0" }
leptix-avatar = { path = "./crates/primitives/avatar", version = "0.1.0" }
leptix-checkbox = { path = "./crates/primitives/checkbox", version = "0.1.0" }
leptix-collapsible = { path = "./crates/primitives/collapsible", version = "0.1.0" }
leptix-toggle-group = { path = "./crates/primitives/toggle-group", version = "0.1.0" }
leptix-radio-group = { path = "./crates/primitives/radio-group", version = "0.1.0" }
leptix-tabs = { path = "./crates/primitives/tabs", version = "0.1.0" }
leptix-accordion = { path = "./crates/primitives/accordion", version = "0.1.0" }
leptix-slider = { path = "./crates/primitives/slider", version = "0.1.0" }
leptix-dialog = { path = "./crates/primitives/dialog", version = "0.1.0" }
leptix-alert-dialog = { path = "./crates/primitives/alert-dialog", version = "0.1.0" }
leptix-popover = { path = "./crates/primitives/popover", version = "0.1.0" }
leptix-tooltip = { path = "./crates/primitives/tooltip", version = "0.1.0" }
leptix-hover-card = { path = "./crates/primitives/hover-card", version = "0.1.0" }
leptix-toolbar = { path = "./crates/primitives/toolbar", version = "0.1.0" }
leptix-dropdown-menu = { path = "./crates/primitives/dropdown-menu", version = "0.1.0" }
leptix-context-menu = { path = "./crates/primitives/context-menu", version = "0.1.0" }
leptix-menubar = { path = "./crates/primitives/menubar", version = "0.1.0" }
leptix-select = { path = "./crates/primitives/select", version = "0.1.0" }
leptix-navigation-menu = { path = "./crates/primitives/navigation-menu", version = "0.1.0" }
leptix-toast = { path = "./crates/primitives/toast", version = "0.1.0" }
leptix-scroll-area = { path = "./crates/primitives/scroll-area", version = "0.1.0" }
leptix-form = { path = "./crates/primitives/form", version = "0.1.0" }
leptix-otp-field = { path = "./crates/primitives/otp-field", version = "0.1.0" }
leptix-password-toggle = { path = "./crates/primitives/password-toggle", version = "0.1.0" }
leptix-visually-hidden = { path = "./crates/primitives/visually_hidden", version = "0.1.0" }

[profile.dev]
debug = false

