[package]
name = "leptix-docs"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8"
console_error_panic_hook = "0.1"
leptix-ui = { path = "../crates/leptix-ui", version = "1.0.0" }
leptix-core = { path = "../crates/core", version = "1.0.0" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Clipboard",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "Navigator",
    "Node",
    "NodeList",
    "Window",
] }

[profile.dev]
opt-level = 1
debug = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
