[package]
name = "leptix-ui"
description = "Leptix UI — Radix-style accessible UI primitives for Leptos."

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = [
    "label", "separator", "accessible-icon", "aspect-ratio",
    "progress", "toggle", "switch", "avatar",
    "checkbox", "collapsible", "toggle-group", "radio-group",
    "tabs", "accordion", "slider",
]
label = ["dep:leptix-label"]
separator = ["dep:leptix-separator"]
accessible-icon = ["dep:leptix-accessible-icon"]
aspect-ratio = ["dep:leptix-aspect-ratio"]
progress = ["dep:leptix-progress"]
toggle = ["dep:leptix-toggle"]
switch = ["dep:leptix-switch"]
avatar = ["dep:leptix-avatar"]
checkbox = ["dep:leptix-checkbox"]
collapsible = ["dep:leptix-collapsible"]
toggle-group = ["dep:leptix-toggle-group"]
radio-group = ["dep:leptix-radio-group"]
tabs = ["dep:leptix-tabs"]
accordion = ["dep:leptix-accordion"]
slider = ["dep:leptix-slider"]

[dependencies]
leptix-core.workspace = true
leptix-label = { workspace = true, optional = true }
leptix-separator = { workspace = true, optional = true }
leptix-accessible-icon = { workspace = true, optional = true }
leptix-aspect-ratio = { workspace = true, optional = true }
leptix-progress = { workspace = true, optional = true }
leptix-toggle = { workspace = true, optional = true }
leptix-switch = { workspace = true, optional = true }
leptix-avatar = { workspace = true, optional = true }
leptix-checkbox = { workspace = true, optional = true }
leptix-collapsible = { workspace = true, optional = true }
leptix-toggle-group = { workspace = true, optional = true }
leptix-radio-group = { workspace = true, optional = true }
leptix-tabs = { workspace = true, optional = true }
leptix-accordion = { workspace = true, optional = true }
leptix-slider = { workspace = true, optional = true }
