[package]
name = "leptix-ui"
description = "Leptix UI — Radix-style accessible UI primitives for Leptos."

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = [
    "label", "separator", "accessible-icon", "aspect-ratio",
    "progress", "toggle", "switch", "avatar",
    "checkbox", "collapsible", "toggle-group", "radio-group",
    "tabs", "accordion", "slider",
    "dialog", "alert-dialog", "popover", "tooltip", "hover-card", "toolbar",
    "dropdown-menu", "context-menu", "menubar", "select",
    "navigation-menu", "toast", "scroll-area", "form",
    "otp-field", "password-toggle",
]
label = ["dep:leptix-label"]
separator = ["dep:leptix-separator"]
accessible-icon = ["dep:leptix-accessible-icon"]
aspect-ratio = ["dep:leptix-aspect-ratio"]
progress = ["dep:leptix-progress"]
toggle = ["dep:leptix-toggle"]
switch = ["dep:leptix-switch"]
avatar = ["dep:leptix-avatar"]
checkbox = ["dep:leptix-checkbox"]
collapsible = ["dep:leptix-collapsible"]
toggle-group = ["dep:leptix-toggle-group"]
radio-group = ["dep:leptix-radio-group"]
tabs = ["dep:leptix-tabs"]
accordion = ["dep:leptix-accordion"]
slider = ["dep:leptix-slider"]
dialog = ["dep:leptix-dialog"]
alert-dialog = ["dep:leptix-alert-dialog"]
popover = ["dep:leptix-popover"]
tooltip = ["dep:leptix-tooltip"]
hover-card = ["dep:leptix-hover-card"]
toolbar = ["dep:leptix-toolbar"]
dropdown-menu = ["dep:leptix-dropdown-menu"]
context-menu = ["dep:leptix-context-menu"]
menubar = ["dep:leptix-menubar"]
select = ["dep:leptix-select"]
navigation-menu = ["dep:leptix-navigation-menu"]
toast = ["dep:leptix-toast"]
scroll-area = ["dep:leptix-scroll-area"]
form = ["dep:leptix-form"]
otp-field = ["dep:leptix-otp-field"]
password-toggle = ["dep:leptix-password-toggle"]

[dependencies]
leptix-core.workspace = true
leptix-label = { workspace = true, optional = true }
leptix-separator = { workspace = true, optional = true }
leptix-accessible-icon = { workspace = true, optional = true }
leptix-aspect-ratio = { workspace = true, optional = true }
leptix-progress = { workspace = true, optional = true }
leptix-toggle = { workspace = true, optional = true }
leptix-switch = { workspace = true, optional = true }
leptix-avatar = { workspace = true, optional = true }
leptix-checkbox = { workspace = true, optional = true }
leptix-collapsible = { workspace = true, optional = true }
leptix-toggle-group = { workspace = true, optional = true }
leptix-radio-group = { workspace = true, optional = true }
leptix-tabs = { workspace = true, optional = true }
leptix-accordion = { workspace = true, optional = true }
leptix-slider = { workspace = true, optional = true }
leptix-dialog = { workspace = true, optional = true }
leptix-alert-dialog = { workspace = true, optional = true }
leptix-popover = { workspace = true, optional = true }
leptix-tooltip = { workspace = true, optional = true }
leptix-hover-card = { workspace = true, optional = true }
leptix-toolbar = { workspace = true, optional = true }
leptix-dropdown-menu = { workspace = true, optional = true }
leptix-context-menu = { workspace = true, optional = true }
leptix-menubar = { workspace = true, optional = true }
leptix-select = { workspace = true, optional = true }
leptix-navigation-menu = { workspace = true, optional = true }
leptix-toast = { workspace = true, optional = true }
leptix-scroll-area = { workspace = true, optional = true }
leptix-form = { workspace = true, optional = true }
leptix-otp-field = { workspace = true, optional = true }
leptix-password-toggle = { workspace = true, optional = true }
