[package]
name = "leptix-alert-dialog"
description = "Leptix Alert Dialog component — a modal dialog that interrupts the user with important content and expects a response."

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
readme = "README.md"

[dependencies]
leptos.workspace = true
leptos-node-ref.workspace = true
leptix-core.workspace = true
leptix-dialog = { path = "../dialog", version = "0.1" }
web-sys.workspace = true
