[package]
name = "leptix-aspect-ratio"
description = "Leptix Aspect Ratio component — displays content within a desired ratio."

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
readme = "README.md"

[dependencies]
leptos.workspace = true
leptos-node-ref.workspace = true
leptix-core.workspace = true
