[package]
name = "leptix-avatar"
description = "Leptix Avatar component — an image element with a fallback for representing the user."

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
readme = "README.md"

[dependencies]
leptos.workspace = true
leptos-node-ref.workspace = true
leptix-core.workspace = true
web-sys = { workspace = true, features = ["HtmlImageElement", "Window"] }
