[package]
name = "leptix-collapsible"
description = "Leptix Collapsible component — an interactive section that expands and collapses."

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
readme = "README.md"

[dependencies]
leptos.workspace = true
leptos-node-ref.workspace = true
leptix-core.workspace = true
web-sys = { workspace = true, features = ["CssStyleDeclaration", "DomRect", "HtmlElement"] }
