[package]
name = "leptix-context-menu"
description = "Leptix Context Menu component — a menu triggered by right-click, extending the Menu primitive."

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
leptos.workspace = true
leptos-node-ref.workspace = true
leptix-core.workspace = true
leptix-dropdown-menu = { path = "../dropdown-menu", version = "0.1.0-alpha.1" }
web-sys.workspace = true
