[package]
name = "leptix-context-menu"
description = "Leptix Context Menu component — a menu triggered by right-click, extending the Menu primitive."

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
leptos.workspace = true
leptos-node-ref.workspace = true
leptix-core.workspace = true
send_wrapper.workspace = true
web-sys.workspace = true
