[package]
name = "leptix-dropdown-menu"
description = "Leptix Dropdown Menu component — a menu triggered by a button, extending the Menu primitive."

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
readme = "README.md"

[dependencies]
floating-ui-leptos.workspace = true
leptos.workspace = true
leptos-node-ref.workspace = true
leptix-core.workspace = true
send_wrapper.workspace = true
web-sys.workspace = true
