[package]
name = "leptix-form"
description = "Leptix Form component — a form component with built-in validation and accessible error messages."

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
readme = "README.md"

[dependencies]
leptos.workspace = true
leptos-node-ref.workspace = true
leptix-core.workspace = true
web-sys = { workspace = true, features = [
    "Document",
    "Event",
    "HtmlInputElement",
    "SubmitEvent",
    "ValidityState",
    "Window",
] }
