[package]
name = "leptix-hover-card"
description = "Leptix Hover Card component — allows sighted users to preview content behind a link."

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
readme = "README.md"

[dependencies]
floating-ui-leptos.workspace = true
leptos.workspace = true
leptos-node-ref.workspace = true
leptix-core.workspace = true
send_wrapper.workspace = true
web-sys = { workspace = true, features = ["Window"] }
