[package]
name = "leptix-menubar"
description = "Leptix Menubar component — a horizontal menu bar with keyboard navigation between menus."

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
readme = "README.md"

[dependencies]
leptos.workspace = true
leptos-node-ref.workspace = true
leptix-core.workspace = true
leptix-dropdown-menu = { path = "../dropdown-menu", version = "0.1" }
web-sys.workspace = true
