[package]
name = "leptix-navigation-menu"
description = "Leptix Navigation Menu component — a collection of navigational links with sub-menu support."

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
readme = "README.md"

[dependencies]
leptos.workspace = true
leptos-node-ref.workspace = true
leptix-core.workspace = true
web-sys = { workspace = true, features = ["HtmlElement", "NodeList"] }
