[package]
name = "leptix-password-toggle"
description = "Leptix Password Toggle Field — a password input with integrated visibility toggle."

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
leptos.workspace = true
leptos-node-ref.workspace = true
leptix-core.workspace = true
