[package]
name = "leptix-popover"
description = "Leptix Popover component — displays rich content in a portal, triggered by a button."

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
leptos.workspace = true
leptos-node-ref.workspace = true
leptix-core.workspace = true
web-sys = { workspace = true, features = ["HtmlElement", "NodeList"] }
