[package]
name = "leptix-scroll-area"
description = "Leptix Scroll Area component — augments native scroll functionality with custom scrollbars."

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
leptos.workspace = true
leptos-node-ref.workspace = true
leptix-core.workspace = true
send_wrapper.workspace = true
web-sys = { workspace = true, features = [
    "Document",
    "Element",
    "HtmlElement",
    "PointerEvent",
    "ResizeObserver",
    "ResizeObserverEntry",
    "ScrollIntoViewOptions",
    "Window",
] }
