[package]
name = "leptix-slider"
description = "Leptix Slider component — an input where the user selects a value from within a given range."

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
readme = "README.md"

[dependencies]
leptos.workspace = true
leptos-node-ref.workspace = true
leptix-core.workspace = true
web-sys = { workspace = true, features = ["DomRect", "HtmlElement"] }
