[package]
name = "leptix-tabs"
description = "Leptix Tabs component — a set of layered sections of content displayed one at a time."

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
leptos.workspace = true
leptos-node-ref.workspace = true
leptix-core.workspace = true
web-sys = { workspace = true, features = ["HtmlElement", "NodeList"] }
